Add defaults setting for local data storage.

--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="0tz-Va-kmm" id="g24-wi-R8f"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" largeTitleDisplayMode="always" id="psr-GM-zlz"/>
+                    <navigationItem key="navigationItem" title="Todoey" largeTitleDisplayMode="always" id="psr-GM-zlz">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="jgM-rm-zVa">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="addItemButtonPressed:" destination="0tz-Va-kmm" id="F8Y-1s-BcJ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Sl-cE-IGb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
