--- a/Todoey/View/Base.lproj/Main.storyboard
+++ b/Todoey/View/Base.lproj/Main.storyboard
@@ -41,6 +41,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Todoey" largeTitleDisplayMode="always" id="psr-GM-zlz">
+                        <barButtonItem key="backBarButtonItem" title="back" id="r19-Ng-Axf"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="jgM-rm-zVa">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
@@ -51,7 +52,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Sl-cE-IGb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="943.20000000000005" y="63.418290854572717"/>
+            <point key="canvasLocation" x="1254" y="63"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XUg-Jb-I67">
@@ -61,15 +62,54 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VwW-HJ-vyy">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.44144721262104736" green="1" blue="0.93585655806393109" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="0tz-Va-kmm" kind="relationship" relationship="rootViewController" id="Ejf-df-LJZ"/>
+                        <segue destination="ACo-Qk-NRI" kind="relationship" relationship="rootViewController" id="spl-UM-TdT"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="guM-NJ-U00" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="284" y="63"/>
+            <point key="canvasLocation" x="-321" y="63"/>
+        </scene>
+        <!--Category Table View Controller-->
+        <scene sceneID="tZE-uE-EXC">
+            <objects>
+                <tableViewController id="ACo-Qk-NRI" customClass="CategoryTableViewController" customModule="Todoey" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="8Jy-rS-Eu6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="a28-4n-9nN">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="a28-4n-9nN" id="Xua-gP-aEE">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="ACo-Qk-NRI" id="lPZ-5y-DYi"/>
+                            <outlet property="delegate" destination="ACo-Qk-NRI" id="mng-op-e6S"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="y13-vD-mMb">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="NyZ-Qv-sr1">
+                            <connections>
+                                <action selector="addCategoryPressed:" destination="ACo-Qk-NRI" id="OoC-Fq-uBa"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="0tz-Va-kmm" kind="show" identifier="goToItems" id="p6S-nM-cPu"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zBP-E8-R1u" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="474" y="63"/>
         </scene>
     </scenes>
 </document>
